Fix overflowing text on timeline headers

--- a/static/style5/_timeline.scss
+++ b/static/style5/_timeline.scss
@@ -77,6 +77,10 @@ div.timeline_event {
 		// fix webkit rendering things 1px too high (?!?!?!)
 		-webkit-transform: translateY(1px);
 
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+
 		html[lang='ko_KO'] & {
 			@include transform(translateY(-2px));
 		}
